# dagster-workspace

./: .gitignore  README.md  dg.toml  example_env  setup_postgres.sh
deployments/local/: pyproject.toml
notes/: commands.md  data_engineering_theory.md  data_notes.md  dependencies.md  dev_and_production.md  logboek.md  tables.sql  tips.md  todo.md
notes/jupyter_notebooks/: test_database_connection.ipynb  transforming_data.ipynb
projects/imdb/: pyproject.toml
projects/imdb/.dg/: telemetry.yaml
projects/imdb/sql/: create_tables.sql
projects/imdb/src/imdb/defs/ingestion/: assets.py  file_configs.py  resources.py
projects/imdb/src/imdb/defs/loading/: asset.py
projects/imdb/src/imdb/defs/transform/: initial_dataframes.py  loaders.py  resources.py  transformed.py
projects/imdb/src/imdb/defs/transform/assets/: name_basics.py  name_known_for_titles.py  name_primary_profession.py  title_akas.py  title_basics.py  title_directors.py  title_episode.py  title_genres.py  title_principals.py  title_ratings.py  title_writers.py
projects/imdb/src/imdb/defs/warehouse/: assets.py  resources.py
