[project]
name = "imdb"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.19",
    "dagster-polars>=0.27.9",
    "dagster-postgres>=0.28.19",
    "pandas>=2.3.3",
    "pl-compare>=0.10.1",
    "polars>=1.39.2",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ipykernel>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "imdb"
registry_modules = [
    "imdb.components.*",
]


